--- a/mmbase/trunk/contributions/didactor2/src/portal/templates/portal/webblock-99.jspx
+++ b/mmbase/trunk/contributions/didactor2/src/portal/templates/portal/webblock-99.jspx
@@ -22,8 +22,10 @@
         <h2><mm:field name="subtitle" /></h2>
         <div class="intro">
           <p>
-            <span class="date"><mm:field name="date"><mm:time format=":LONG" /></mm:field></span>
-            <jsp:text> - </jsp:text>
+            <span class="date">
+              <mm:field name="date"><mm:time format=":LONG" /></mm:field>
+              <jsp:text> - </jsp:text>
+            </span>
             <mm:field name="intro" escape="p-ommit-surrounding,links"  />
           </p>
         </div>
