MMB-1354 fixed layout of all templates except search

--- a/contributions/natmm/templates/natmm/hoofdsite/themas/main.css
+++ b/contributions/natmm/templates/natmm/hoofdsite/themas/main.css
@@ -178,6 +178,27 @@ A.navbutton {
 	letter-spacing: 2px;
 	text-align: center;
 }
+input.cart {
+	border: 0px;
+	font-size: 10px;
+	font-family: Arial, sans-serif;
+	text-align: center;
+	width:21px;
+	height:13px;
+}
+table.thumbnail {
+	border: 1px #DFDFDF solid;
+	width: 46px;
+	height: 71px;
+}
+td.thumbnail {
+	padding-top:6px;
+	padding-bottom:6px;
+	padding-left:3px;
+	padding-right:3px;
+	text-align: center;
+	vertical-align: middle;
+}
 td.nav {
 	color: #F37021;
 	font-size: 13px;
@@ -192,7 +213,8 @@ td.cartheader {
 	font-size: 12px;
 	font-weight: bold;
 	text-align: center;
-	line-height : 85%;	
+	line-height : 85%;
+  vertical-align: top;	
 }
 td.cartodd {
 	background-color: #FFF5EC;
@@ -212,4 +234,9 @@ td.carteven {
 	font-size: 10px;
 	text-align: center;
 	vertical-align: middle;
+}
+td.thumbnailparent {
+	font-size: 10px;
+	align: center;
+	text-align: center;
 }
