--- a/mmbase/trunk/applications/email/examples/mmbase18.jspx
+++ b/mmbase/trunk/applications/email/examples/mmbase18.jspx
@@ -2,36 +2,77 @@
   xmlns="http://www.w3.org/1999/xhtml"
   xmlns:jsp="http://java.sun.com/JSP/Page"
   xmlns:mm="http://www.mmbase.org/mmbase-taglib-2.0">
-  <jsp:directive.page session="false" buffer="200kb" />  
-  <mm:content language="nl" postprocessor="none">
+  <!-- 
+       @author  Michiel Meeuwissen
+       @version $Id: mmbase18.jspx,v 1.2 2007-01-05 20:03:32 michiel Exp $
+  -->
+  <jsp:directive.page session="false" buffer="10kb" />  
+  <mm:content language="en" postprocessor="none">
+
     <head>
       <title>Modern way to make a mail-form</title>
+      <mm:link page="/mmbase/style/css/mmbase.css">
+        <link rel="stylesheet" href="${_}" type="text/css" />
+      </mm:link>
+      <mm:link page="/mmbase/style/images/favicon.ico">
+        <link rel="icon" href="${_}" type="image/x-icon" />
+        <link rel="shortcut icon" href="${_}" type="image/x-icon" />
+      </mm:link>
     </head>
+
     <body>        
       <mm:cloud method="delegate" authenticate="class">
+        
+
+        <!-- form is like a transaction -->
         <mm:form mode="form">
+
+
+          <!-- because in transaction now actual object will be created until commit -->
           <mm:createnode type="email" commitonclose="false">
+
+            <!-- set some values to appear in the form -->
             <mm:setfield name="subject">Just a demo</mm:setfield>
             <mm:setfield name="to">Michiel.Meeuwissen@omroep.nl</mm:setfield>
             <mm:setfield name="from">&lt;Your address emailadres&gt;</mm:setfield>
             <mm:setfield name="body">Hello, world!</mm:setfield>
+
+            <!-- start creating actual form-entries -->
             <mm:fieldlist fields="subject,from,cc,body">
               <p><mm:fieldinfo type="guiname" />: <mm:fieldinfo type="input" /> <mm:fieldinfo type="errors" /></p>
             </mm:fieldlist>
             <mm:fieldlist fields="to">
               <p><mm:fieldinfo type="guiname" />: <mm:fieldinfo type="guivalue" escape="links" /></p>
             </mm:fieldlist>
+
             <input type="submit" name="mail" value="Mail" />
+
+            <!-- if form is valid, and submitted, start actually sending the mail -->
             <mm:valid>
               <mm:import externid="mail" />
               <mm:present referid="mail">
+
+                <!-- commit it -->
                 <mm:commit />
+                
+                <!-- and call the function to mail -->
                 <mm:function name="mail" />
-                <p>Thanks, for sending the above mail</p>
                 <!--
                     could e.g. also redirect if you don't want to see the form again.
                 -->
               </mm:present>
+              <p>Thanks, for sending the above mail.</p>
+              <p>
+                Status was:
+                <mm:functioncontainer>
+                  <mm:param name="field">mailstatus</mm:param>
+                  <mm:function name="gui" />
+                </mm:functioncontainer>
+              </p>
+            </mm:valid>
+            <!-- if not valid, the form is still showed, so that people can fix its content -->
+            <mm:valid inverse="true">
+              <p>The form was not valid, no mail was sent. Please retry.</p>
             </mm:valid>
           </mm:createnode>
         </mm:form>
