--- a/contributions/didactor2/src/core/templates/shared/findProvider.jspx
+++ b/contributions/didactor2/src/core/templates/shared/findProvider.jspx
@@ -135,6 +135,7 @@
   <mm:notpresent referid="education">
     <mm:import id="includePath"><mm:write referid="provider" /></mm:import>
   </mm:notpresent>
+  <mm:write request="education" referid="education" />
   
   <mm:import id="referids">provider?,education?,class?,workgroup?</mm:import>
   <jsp:directive.include file="globalLang.jspx" />
