--- a/mmbase/branches/MMBase-1_9/applications/streams/src/main/webapp/mmbase/components/streams/upload.head.jspx
+++ b/mmbase/branches/MMBase-1_9/applications/streams/src/main/webapp/mmbase/components/streams/upload.head.jspx
@@ -39,6 +39,7 @@
       	position: absolute;
       	top: 0;
       	left: 0;
+      	border-right: 2px solid #aaa;
       }
       
       div.progressInfo span.percentage
