--- a/base-webapp/src/main/webapp/mmbase/edit/x/index.jspx
+++ b/base-webapp/src/main/webapp/mmbase/edit/x/index.jspx
@@ -1,4 +1,4 @@
-<mm:content 
+<mm:content
     unacceptable="Please use a better browser"
     type="application/xhtml+xml" language="client" expires="0" postprocessor="none" jspvar="locale"
     xmlns:c="http://java.sun.com/jsp/jstl/core"
@@ -8,15 +8,15 @@
   <jsp:output doctype-root-element="html"
               doctype-public="-//W3C//DTD XHTML 1.0 Strict//EN"
               doctype-system="http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"/>
-  <jsp:directive.page session="true" buffer="200kb" />  
+  <jsp:directive.page session="true" buffer="200kb" />
   <html lang="${locale}"
         xmlns="http://www.w3.org/1999/xhtml">
-    <!-- 
+    <!--
          Produces a search-tool, and the search result with links to create and change MMBase nodes.
          $Id$
     -->
     <mm:cloud rank="basic user">
-      
+
       <mm:include page="head.jspx" />
       <body>
         <mm:import externid="nodemanager">object</mm:import>
@@ -24,7 +24,7 @@
         <mm:import externid="pagesize" from="request,">50</mm:import>
         <mm:import externid="referids">nodemanager,only?,pagesize</mm:import>
 
-        
+
         <!-- handle delete nodes -->
         <mm:import externid="action" />
         <mm:compare referid="action" value="delete">
@@ -94,7 +94,7 @@
 
           <table id="searchresult" summary="Search results for ${nodemanager}">
             <mm:import externid="offset">0</mm:import>
-            
+
             <mm:listnodescontainer type="$nodemanager">
               <mm:import externid="sortfields">number</mm:import>
               <mm:import externid="sortdirections">down</mm:import>
@@ -102,20 +102,20 @@
               <mm:compare referid="only" value="on">
                 <mm:typeconstraint name="$nodemanager" descendants="false" />
               </mm:compare>
-              
+
               <mm:link id="base" page="." referids="$referids">
                 <mm:fieldlist nodetype="$nodemanager" type="search">
                   <mm:fieldinfo type="reusesearchinput" />
                   <mm:fieldinfo type="usesearchinput" />
                 </mm:fieldlist>
               </mm:link>
-              
+
               <mm:size id="size" write="false" />
-              
+
               <mm:maxnumber value="$pagesize" />
               <mm:offset    value="$offset" />
-              
-              
+
+
               <thead>
                 <tr class="paging">
                   <th colspan="2">${offset} - ${offset + pagesize lt size ? offset + pagesize : size} / ${size}</th>
@@ -140,18 +140,18 @@
                     <mm:write referid="paging" escape="none" />
                   </th>
                 </tr>
-                
+
                 <tr class="head">
                   <th colspan="3">
-                    <select name="action" 
-                            onchange="document.getElementById('searchresult').className = 'delete'; 
+                    <select name="action"
+                            onchange="document.getElementById('searchresult').className = 'delete';
                                       if (confirm('Are you sure?')) { this.form.submit();} else
                                       { this.value = ''; document.getElementById('searchresult').className = 'nothing'; }" >
                       <option value="">--</option>
                       <option value="delete">delete</option>
                       <option value="edit">edit</option>
                     </select>
-                    <input type="checkbox" 
+                    <input type="checkbox"
                            id="selectall" />
                   </th>
                   <mm:fieldlist nodetype="$nodemanager" type="list">
@@ -159,7 +159,7 @@
                   </mm:fieldlist>
                 </tr>
               </thead>
-              
+
               <mm:listnodes id="result" />
 
               <c:if test="${fn:length(result) gt 0}">
@@ -178,17 +178,18 @@
                     <th colspan="100"><mm:write referid="paging" escape="none" /></th>
                   </tr>
                 </tfoot>
-                
+
                 <tbody>
                   <mm:listnodes referid="result">
                     <mm:index id="index" write="false" />
                     <mm:maywrite inverse="true"><mm:import id="readonly">readonly</mm:import></mm:maywrite>
-                    <mm:maywrite ><mm:import id="readonly"></mm:import></mm:maywrite>
+                    <mm:maywrite><mm:import id="readonly" /></mm:maywrite>
                     <mm:link referids="_node@node,$referids" page="change.jspx">
-                      <mm:import id="class">${index % 2 == 0 ? 'even' : 'odd'} ${readonly}</mm:import>
-                      <tr class="${class}">
+                      <mm:import id="clazz">${index % 2 == 0 ? 'even' : 'odd'} ${readonly}</mm:import>
+                      <tr class="${clazz}">
+
                         <td class="nodeselect" >
-                          <input id="checkbox_${_node.number}"  value="${_node.number}"  
+                          <input id="checkbox_${_node.number}"  value="${_node.number}"
                                  class="nodesbox" type="checkbox" name="nodes"
                                  onclick="event.stopPropagation();" />
                         </td>
@@ -225,7 +226,7 @@
                els[i].addEventListener("click", function() {
                   document.location.href = this.parentNode.cells[1].firstChild.href;
                }, false);
-            } 
+            }
             if (pattern2.test(els[i].className)) {
                els[i].addEventListener("click", function(e) {
                   var input = this.childNodes[0];
@@ -239,9 +240,9 @@
           }
           var selectAll = document.getElementById("selectall");
           selectAll.addEventListener("change", function() {
-              var els = document.getElementsByTagName('input'); 
-              for (var el in els) { 
-                 if (els[el].className == 'nodesbox') {  
+              var els = document.getElementsByTagName('input');
+              for (var el in els) {
+                 if (els[el].className == 'nodesbox') {
                    els[el].checked = this.checked; els[el].checked
                    check(els[el].parentNode.parentNode, this.checked);
                  }
